--- a/contatooh/public/partials/contato.html
+++ b/contatooh/public/partials/contato.html
@@ -14,6 +14,14 @@
       <input type="email" class="form-control" id="email"
         placeholder="email@exemplo.com" name="email" ng-model="contato.email" required>
     </div>
+    <div class="form-group">
+      <label for="emergencia">Emergência</label>
+      <select id="emergencia"
+              class="form-control"
+              ng-model="contato.emergencia"
+              ng-options="contato._id as contato.nome for contato in contatos">
+      </select>
+    </div>
   </div>
   <div>
     <button type="submit" class="btn btn-primary">
