--- a/contatooh/app/views/404.ejs
+++ b/contatooh/app/views/404.ejs
@@ -1,19 +1,22 @@
 <!doctype html>
 <html>
   <head>
-    <title>Autenticação do Usuário</title>
+    <title>Página não encontrada</title>
     <meta name="viewport" content="width=device-width">
     <meta charset="UTF-8">
     <link rel="stylesheet"
           href="vendor/bootstrap/dist/css/bootstrap.css">
-    <link rel="sylesheet"
+    <link rel="stylesheet"
           href="vendor/bootstrap/dist/css/bootstrap-theme.css">
   </head>
   <body>
     <div class="container">
-      <a href="/auth/github">
-        <h1 class="text-center">Entre pelo GitHub</h1>
-      </a>
+      <div class="jumbotron">
+        <h1 class="text-center">Página não encontrada!</h1>
+      </div>
+      <h2 class="text-center">
+        <a href="/">Voltar para a página principal</a>
+      </h2>
     </div>
   </body>
 </html>
