--- a/contatooh/app/views/index.ejs
+++ b/contatooh/app/views/index.ejs
@@ -1,10 +1,31 @@
+<!-- public/index.html -->
 <!doctype html>
-<html>
+<html ng-app="contatooh">
 	<head>
+		<meta name="viewport" content="width=device-width">
 		<meta charset="UTF-8">
-		<title>Bem-vindo</title>
+		<title>Contatooh</title>
+		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
+		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
 	</head>
-	<body>
-		<h1>Bem-vindo ao <%=nome %></h1>
+	<body class="container">
+		<div class="text-right">
+			<p>
+				Logado como: <span id="usuario-logado">
+										 	 <%=usuarioLogado%>
+										 </span>
+				<a href="/logout">Logout</a>
+			</p>
+		</div>
+
+		<div ng-view></div>
+
+		<script src="vendor/angular/angular.js"></script>
+		<script src="vendor/angular-route/angular-route.js"></script>
+		<script src="vendor/angular-resource/angular-resource.js"></script>
+		<script src="js/main.js"></script>
+		<script src="js/controllers/ContatosController.js"></script>
+		<script src="js/controllers/ContatoController.js"></script>
+		<script src="js/services/ContatoService.js"></script>
 	</body>
 </html>
