--- a/contatooh/app/views/index.ejs
+++ b/contatooh/app/views/index.ejs
@@ -5,8 +5,10 @@
 		<meta name="viewport" content="width=device-width">
 		<meta charset="UTF-8">
 		<title>Contatooh</title>
+		<!-- build:css css/index.min.css -->
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css">
 		<link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-theme.css">
+		<!-- endbuild -->
 	</head>
 	<body class="container">
 		<div class="text-right">
@@ -20,6 +22,7 @@
 
 		<div ng-view></div>
 
+		<!-- build:js js/index.min.js -->
 		<script src="vendor/angular/angular.js"></script>
 		<script src="vendor/angular-route/angular-route.js"></script>
 		<script src="vendor/angular-resource/angular-resource.js"></script>
@@ -27,5 +30,6 @@
 		<script src="js/controllers/ContatosController.js"></script>
 		<script src="js/controllers/ContatoController.js"></script>
 		<script src="js/services/ContatoService.js"></script>
+		<!-- endbuild -->
 	</body>
 </html>
