--- a/app/views/auth.ejs
+++ b/app/views/auth.ejs
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <a href="/auth/github">
+      <a id="entrar" href="/auth/github">
         <h1 class="text-center">Entre pelo GitHub</h1>
       </a>
     </div>
